--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -7,7 +7,7 @@ jobs:
       args:
         git_repo: '{git_repo}'
         git_refspec: '{git_refspec}'
-        template: &ci-pr66-f26
+        template: &ci-master-f26
           name: felipevolpone/ci-pr66-f26
           version: 0.1.0
         timeout: 1800
