--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -1,35 +1,12 @@
 jobs:
-  fedora-26/build:
+  fedora-26/tox:
     requires: []
-    priority: 100
+    priority: 50
     job:
-      class: Build
+      class: ToxTests
       args:
         git_repo: '{git_repo}'
-        git_refspec: '{git_refspec}'
-        template: &ci-master-f26
-          name: freeipa/ci-master-f26
-          version: 0.1.3
-        timeout: 1800
-
-  fedora-26/simple_replication:
-    requires: [fedora-26/build]
-    priority: 50
-    job:
-      class: RunPytest
-      args:
-        build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_simple_replication.py
-        template: *ci-master-f26
-        timeout: 3600
-
-  fedora-26/caless:
-    requires: [fedora-26/build]
-    priority: 50
-    job:
-      class: RunPytest
-      args:
-        build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_caless.py::TestServerReplicaCALessToCAFull
-        template: *ci-master-f26
+        template: 
+          name: felipevolpone/ci-pr13-f26
+          version: 0.2.0
         timeout: 3600
