--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -1,3 +1,17 @@
+topologies:
+  master_1repl: &master_1repl
+    name: master_1repl
+    cpu: 2
+    memory: 4098
+  master_1repl_1client: &master_1repl_1client
+    name: master_1repl_1client
+    cpu: 6
+    memory: 6144
+  master_2repl_1client: &master_2repl_1client
+    name: master_2repl_1client
+    cpu: 2
+    memory: 4098
+
 jobs:
   fedora-26/build:
     requires: []
@@ -22,8 +36,9 @@ jobs:
         test_suite: test_integration/test_simple_replication.py
         template: *ci-master-f26
         timeout: 3600
+        topology: *master_1repl
 
-  fedora-26/caless:
+fedora-26/caless:
     requires: [fedora-26/build]
     priority: 50
     job:
@@ -33,3 +48,4 @@ jobs:
         test_suite: test_integration/test_caless.py::TestServerReplicaCALessToCAFull
         template: *ci-master-f26
         timeout: 3600
+        topology: *master_1repl_1client
