--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -25,6 +25,7 @@ jobs:
           name: freeipa/ci-master-f26
           version: 0.1.3
         timeout: 1800
+        topology: *master_1repl
 
   fedora-26/simple_replication:
     requires: [fedora-26/build]
