--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -12,24 +12,13 @@ jobs:
           version: 0.1.7
         timeout: 1800
 
-  fedora-26/simple_replication:
+  fedora-26/external_ca:
     requires: [fedora-26/build]
     priority: 50
     job:
       class: RunPytest
       args:
         build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_simple_replication.py
-        template: *ci-master-f26
-        timeout: 3600
-
-  fedora-26/caless:
-    requires: [fedora-26/build]
-    priority: 50
-    job:
-      class: RunPytest
-      args:
-        build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_caless.py::TestServerReplicaCALessToCAFull
+        test_suite: test_integration/test_external_ca.py::TestExternalCA
         template: *ci-master-f26
         timeout: 3600
