--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -43,14 +43,15 @@ jobs:
         timeout: 3600
         topology: *master_1repl
 
-  fedora-26/external_ca:
+  fedora-26/forced_client_enrolment:
     requires: [fedora-26/build]
     priority: 50
     job:
       class: RunPytest
       args:
         build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_external_ca.py::TestExternalCA
+        test_suite: test_integration/test_forced_client_reenrollment.py
         template: *ci-master-f26
         timeout: 3600
-        topology: *master_1repl
+        topology: *master_1repl_1client
+
