--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -31,27 +31,15 @@ jobs:
         timeout: 1800
         topology: *build
 
-  fedora-26/serverdel:
+  fedora-26/xmlprc_A:
     requires: [fedora-26/build]
     priority: 50
     job:
       class: RunPytest
       args:
         build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_server_del.py
+        test_suite: test_xmlrpc/test_a*
         template: *ci-master-f26
         timeout: 3600
         topology: *master_1repl
-
-  fedora-26/forced_client_enrolment:
-    requires: [fedora-26/build]
-    priority: 50
-    job:
-      class: RunPytest
-      args:
-        build_url: '{fedora-26/build_url}'
-        test_suite: test_integration/test_forced_client_reenrollment.py
-        template: *ci-master-f26
-        timeout: 3600
-        topology: *master_1repl_1client
 
