--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -1,19 +1,23 @@
 topologies:
-  build: &build
-    name: build
-    cpu: 2
-    memory: 3800
-  master_1repl: &master_1repl
-    name: master_1repl
-    cpu: 4
-    memory: 5750
-  master_1repl_1client: &master_1repl_1client
-    name: master_1repl_1client
-    cpu: 4
-    memory: 6700
-
+    build: &build
+      name: build
+      cpu: 2
+      memory: 3800
+    master_1repl: &master_1repl
+      name: master_1repl
+      cpu: 4
+      memory: 5750
+    master_1repl_1client: &master_1repl_1client
+      name: master_1repl_1client
+      cpu: 4
+      memory: 6700
+    master_2repl: &master_2repl
+      name: master_2repl
+      cpu: 6
+      memory: 8150
+  
 jobs:
-  fedora-27/build:
+   fedora-26/build:
     requires: []
     priority: 100
     job:
@@ -21,44 +25,128 @@ jobs:
       args:
         git_repo: '{git_repo}'
         git_refspec: '{git_refspec}'
-        template: &ci-master-f27
-          name: freeipa/ci-master-f27
-          version: 1.0.1
+        template: &ci-master-f26
+          name: freeipa/ci-master-f26
+          version: 0.1.7
         timeout: 1800
         topology: *build
-
-  fedora-27/simple_replication:
-    requires: [fedora-27/build]
+ 
+   fedora-26/serverdel:
+    requires: [fedora-26/build]
     priority: 50
     job:
       class: RunPytest
       args:
-        build_url: '{fedora-27/build_url}'
-        test_suite: test_integration/test_simple_replication.py
-        template: *ci-master-f27
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_server_del.py
+        template: *ci-master-f26
         timeout: 3600
         topology: *master_1repl
-
-  fedora-27/caless:
-    requires: [fedora-27/build]
+ 
+   fedora-26/forced_client_enrolment:
+    requires: [fedora-26/build]
     priority: 50
     job:
       class: RunPytest
       args:
-        build_url: '{fedora-27/build_url}'
-        test_suite: test_integration/test_caless.py::TestServerReplicaCALessToCAFull
-        template: *ci-master-f27
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_forced_client_reenrollment.py
+        template: *ci-master-f26
         timeout: 3600
-        topology: *master_1repl
-
-  fedora-27/external_ca:
-    requires: [fedora-27/build]
+        topology: *master_1repl_1client
+ 
+   fedora-26/backup_and_restore:
+    requires: [fedora-26/build]
     priority: 50
     job:
       class: RunPytest
       args:
-        build_url: '{fedora-27/build_url}'
-        test_suite: test_integration/test_external_ca.py::TestExternalCA
-        template: *ci-master-f27
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_backup_and_restore.py
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_1repl_1client
+ 
+   fedora-26/test_sudo:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_sudo.py
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_1repl_1client
+ 
+   fedora-26/test_customized_ds_config_install:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_customized_ds_config_install.py
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_1repl_1client
+ 
+   fedora-26/test_dns_locations:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_dns_locations.py
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_2repl
+ 
+   fedora-26/test_http_kdc_proxy:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_http_kdc_proxy.py
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_1repl_1client
+ 
+   fedora-26/test_vault:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_vault.py
+        template: *ci-master-f26
         timeout: 3600
         topology: *master_1repl
+ 
+   fedora-26/test_topology_TestTopologyOptions:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_topology.py::TestTopologyOptions
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_2repl
+ 
+   fedora-26/test_topology_TestCASpecificRUVs:
+    requires: [fedora-26/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-26/build_url}'
+        test_suite: test_integration/test_topology.py::TestCASpecificRUVs
+        template: *ci-master-f26
+        timeout: 3600
+        topology: *master_2repl
