--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -27,38 +27,92 @@ jobs:
         timeout: 1800
         topology: *build
 
-  fedora-27/simple_replication:
+  TestBackupAndRestore:
     requires: [fedora-27/build]
     priority: 50
     job:
       class: RunPytest
       args:
         build_url: '{fedora-27/build_url}'
-        test_suite: test_integration/test_simple_replication.py
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupAndRestore
         template: *ci-master-f27
         timeout: 3600
         topology: *master_1repl
 
-  fedora-27/caless:
+
+  TestBackupAndRestoreWithDNS:
     requires: [fedora-27/build]
     priority: 50
     job:
       class: RunPytest
       args:
         build_url: '{fedora-27/build_url}'
-        test_suite: test_integration/test_caless.py::TestServerReplicaCALessToCAFull
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupAndRestoreWithDNS
         template: *ci-master-f27
         timeout: 3600
         topology: *master_1repl
 
-  fedora-27/external_ca:
+
+  TestBackupReinstallRestoreWithDNS:
     requires: [fedora-27/build]
     priority: 50
     job:
       class: RunPytest
       args:
         build_url: '{fedora-27/build_url}'
-        test_suite: test_integration/test_external_ca.py::TestExternalCA
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupReinstallRestoreWithDNS
+        template: *ci-master-f27
+        timeout: 3600
+        topology: *master_1repl
+
+
+  TestBackupAndRestoreWithDNSSEC:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupAndRestoreWithDNSSEC
+        template: *ci-master-f27
+        timeout: 3600
+        topology: *master_1repl
+
+
+  TestBackupReinstallRestoreWithDNSSEC:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupReinstallRestoreWithDNSSEC
+        template: *ci-master-f27
+        timeout: 3600
+        topology: *master_1repl
+
+
+  TestBackupAndRestoreWithKRA:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupAndRestoreWithKRA
+        template: *ci-master-f27
+        timeout: 3600
+        topology: *master_1repl
+
+
+  TestBackupReinstallRestoreWithKRA:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite:   test_integration/test_backup_and_restore.py::TestBackupReinstallRestoreWithKRA
         template: *ci-master-f27
         timeout: 3600
         topology: *master_1repl
