--- a/.freeipa-pr-ci.yaml
+++ b/.freeipa-pr-ci.yaml
@@ -11,6 +11,10 @@ topologies:
     name: master_1repl_1client
     cpu: 4
     memory: 6700
+  master_2repl_1client: &master_2repl_1client
+    name: master_2repl_1client
+    cpu: 5
+    memory: 9100
 
 jobs:
   fedora-27/build:
@@ -207,3 +211,14 @@ jobs:
         timeout: 3600
         topology: *master_1repl_1client
 
+  fedora-27/test_dnssec:
+    requires: [fedora-27/build]
+    priority: 50
+    job:
+      class: RunPytest
+      args:
+        build_url: '{fedora-27/build_url}'
+        test_suite: test_integration/test_dnssec.py
+        template: *ci-master-f27
+        timeout: 8000
+        topology: *master_2repl_1client
